fix geocoding result layout on firefox

--- a/static/cartoview_basic_viewer/src/css/view.css
+++ b/static/cartoview_basic_viewer/src/css/view.css
@@ -3,6 +3,14 @@
     flex: 1
 }
 
+.geocoding-result {
+    width: 100%;
+    height: 200px;
+    display: flex;
+    overflow-y: overlay;
+    overflow-y: scroll
+}
+
 .full-width {
     width: 100%
 }
